Fixed Printer DCA not showing printer names when unable to connect.
Added a FAQ view to the home page to find things easier.

--- a/Wiki/static/css/styles.css
+++ b/Wiki/static/css/styles.css
@@ -68,6 +68,8 @@ img {
 }
 
 .form-dan {
-    padding:10px;
+}
+
+#advSearch {
     width:10px;
 }
